Reader function for researchers,groups,departments.json
